# Frame-Capture

./: CMakeLists.txt  cropdialog.cpp  cropdialog.h  libraryitemdelegate.cpp  libraryitemdelegate.h  librarywidget.cpp  librarywidget.h  mainwindow.cpp  mainwindow.h  videoprocessor.cpp  videoprocessor.h  videoworker.cpp  videoworker.h  viewpanel.cpp  viewpanel.h
